# GCMMA-MMA-Python

./: .gitignore  .zenodo.json  GCMMA_BEAM.py  MANIFEST.in  MMA.py  MMA_BEAM2.py  MMA_FUNCTION.py  MMA_FUNCTION2.py  MMA_TOY2.py  MMA_TRUSS2.py  README.md  pyproject.toml  zenodo.json
.github/: FUNDING.yml
.github/workflows/: python-publish.yml
Code/: GCMMA_BEAM.py  MMA.py  MMA_BEAM2.py  MMA_FUNCTION.py  MMA_FUNCTION2.py  MMA_TOY2.py  MMA_TRUSS2.py
examples/: gcmma_beam.py  mma_beam2.py  mma_function.py  mma_function2.py  mma_toy2.py  mma_truss2.py  util.py
scr/gcmma-mma-py/: __init__.py
scr/mmapy/: mma.py
src/mma/: __init__.py  mma.py
src/mmapy/: __init__.py  mma.py
